--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -76,6 +76,7 @@ mark_weilibianhua: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main
 mark_shanbi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3023.png'
 mark_shiquweijue: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3024.png'
 mark_wulicao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3025.png'
+mark_xishoucao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3026.png'
 mark_shanghaizhuanhua: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3026.png'
 mark_jinzhenfenmo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3027.png'
 mark_dixiaowulishanghai: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3028.png'
@@ -99,3 +100,4 @@ mark_kongqichuliang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@ma
 mark_yinbozhi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3050.png'
 mark_zaoyin: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3051.png'
 mark_yinzhiwang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3052.png'
+mark_global_qingtian: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/20001.png'
