fix: xiaoxiaokui emblem

--- a/data/effect_emblem.yaml
+++ b/data/effect_emblem.yaml
@@ -86,7 +86,7 @@
   condition:
     type: every
     conditions:
-      - type: selfAddMark
+      - type: selfBeAddMark
       - type: evaluate
         target:
           base: addMarkContext
