--- a/data/effect_mark.yaml
+++ b/data/effect_mark.yaml
@@ -644,3 +644,34 @@
             - type: divide
               arg: 4 #TODO: 有葵花种子时，除以2
   consumesStacks: 1
+- id: effect_mark_reduce_special_damage_with_stack
+  trigger: OnBeforeCalculateDamage
+  condition:
+    type: every
+    conditions:
+      - type: selfBeDamaged
+      - type: evaluate
+        target:
+          base: damageContext
+          chain:
+            - type: selectPath
+              arg: damageType
+        evaluator:
+          type: same
+          value: Special
+  priority: 0
+  apply:
+    type: addModified
+    target: damageContext
+    percent:
+      type: dynamic
+      selector:
+        base: mark
+        chain:
+          - type: select
+            arg:
+              type: base
+              arg: stack
+          - type: multiply
+            arg: -1
+    delta: 0
