--- a/data/mark.yaml
+++ b/data/mark.yaml
@@ -434,6 +434,17 @@
     inheritOnFaint: false
   effect:
     - effect_mark_absorb_damage_to_heal
+- id: mark_rouhua
+  config:
+    duration: 5
+    persistent: false
+    maxStacks: 1
+    stackable: true
+    stackStrategy: refresh
+    destroyable: true
+    keepOnSwitchOut: true
+  effect:
+    - effect_mark_reduce_special_damage_with_stack
 - id: mark_shanghaizhuanhua
 - id: mark_jinzhenfenmo
 - id: mark_dixiaowulishanghai
