--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -907,4 +907,193 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_add_accuracy_when_reused #TODO
+    - effect_skill_add_accuracy_when_reused
+- id: skill_chongfeng
+  element: Normal
+  category: Physical
+  power: 40
+  rage: 0
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_atk_5_percent
+- id: skill_zhongji
+  element: Normal
+  category: Physical
+  power: 60
+  rage: 5
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_def_5_percent
+- id: skill_bianfei
+  element: Normal
+  category: Status
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_zengzhong_1 #TODO
+- id: skill_tizhongyapo
+  element: Normal
+  category: Physical
+  power: 55
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power2x_if_heavier
+- id: skill_yinghuazhifang
+  element: Normal
+  category: Status
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_def_1_stages
+- id: skill_zhifanghudun
+  element: Normal
+  category: Status
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_zhifanghudun_stack_with_weight
+- id: skill_qilingruoxiao
+  element: Normal
+  category: Physical
+  power: 50
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power2x_if_higher_level
+- id: skill_konghe
+  element: Normal
+  category: Status
+  power: 0
+  rage: 10
+  accuracy: 25
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_increase_accuracy_50_if_higher_level
+    - effect_skill_add_mark_foe_haipa
+- id: skill_weixiaguangbo
+  element: Normal
+  category: Special
+  power: 70
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_haipa_10_if_heavier_40
+- id: skill_tuidao
+  element: Normal
+  category: Physical
+  power: 10
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_fixed_damage_by_weight #TODO
+- id: skill_quanliyiji
+  element: Normal
+  category: Physical
+  power: 100
+  rage: 20
+  accuracy: 85
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_atk_1_stage_5_percent
+- id: skill_tizhongbaozhang
+  element: Normal
+  category: Status
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_zengzhong_2
+- id: skill_chaozhongliangongji
+  element: Normal
+  category: Climax
+  power: 160
+  rage: 100
+  accuracy: 95
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_tanhuan_10
+- id: skill_tizhongzhishang
+  element: Normal
+  category: Physical
+  power: 60
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power2x_if_weight_above_99 #TODO
+- id: skill_zhifangranshao
+  element: Normal
+  category: Status
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_shanghaizengjia_stack_with_zengzhong_stack_x75
+    - effect_skill_consume_all_zengzhong
+- id: skill_zhifangzhengqi
+  element: Normal
+  category: Special
+  power: 80
+  rage: 20
+  accuracy: 85
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_exin_50
+- id: skill_tanxingzhifang
+  element: Normal
+  category: Status
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_tanxingzhifang
