--- a/data/effect_skill.yaml
+++ b/data/effect_skill.yaml
@@ -1547,12 +1547,12 @@
             value: mark_zengzhong
     value: 2
   condition: *condition_self_use_skill_template
-- id: effect_skill_add_mark_exin_50
+- id: effect_skill_add_mark_exin_foe_50
   trigger: OnHit
   priority: 0
   apply:
     type: addMark
-    target: self
+    target: foe
     mark:
       type: entity:baseMark
       value: mark_exin
