--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "^5.1.0",
     "i18next": "^24.2.3",
     "pino": "^9.6.0",
+    "reflect-metadata": "^0.2.2",
     "socket.io": "^4.8.1",
     "ts-morph": "^25.0.1",
     "yaml": "^2.7.1",
